GNOME Bugzilla – Bug 747227
hardware back button does not work
Last modified: 2015-08-29 16:32:10 UTC
My mouse has hardware back and forward buttons. They work in nautilus but not in software. Shouldn't be hard to get that working.
Created attachment 309937 [details] [review] Add mouse hardware back button and also Alt+Left wherever it was missing Here it is. I hope it also works correctly for RTL locales. I mean, whichever mouse button is a "hardware back button" in the means of RTL users it returns the button number 8. Please fix me if I'm wrong.
Thanks for the patch, Rafal! Pushed to master as https://git.gnome.org/browse/gnome-software/commit/?id=6e265aff8c2d450a7b2ab1765c41c753fca9edb0 with some minor coding style fixes.